--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
+    "@types/js-cookie": "^2.2.2",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.18",
+    "axios": "^0.19.0",
     "concurrently": "^4.1.2",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "js-cookie": "^2.2.1",
+    "nodemon": "^1.19.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -16,7 +22,7 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"react-scripts start\" \"node ./server/index.js\"",
+    "start": "concurrently --kill-others \"react-scripts start\" \"nodemon ./server/index.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
