--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.18",
     "axios": "^0.19.0",
+    "babel-node": "^0.0.1-security",
     "concurrently": "^4.1.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
