--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@types/js-cookie": "^2.2.2",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
-    "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.18",
     "axios": "^0.19.0",
@@ -18,14 +17,14 @@
     "js-cookie": "^2.2.1",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "concurrently --kill-others \"react-scripts start\" \"nodemon ./server/index.js\"",
+    "start": "node ./server/index.js",
+    "start-dev": "concurrently --kill-others \"react-scripts start\" \"nodemon ./server/index.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
